# HardFX

./: CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
s.github/workflows/: build.yml
